<resources>
    <string name="app_name">EDUMAGIKA</string>
    <string name="empty"></string>
    <string name="submit_success">Submit Successfully</string>
    <string name="upload">Upload File</string>
    <string name="appid" translatable="false">ca-app-pub-6436658914108583~7972843498</string>
    <string name="banner" translatable="false">ca-app-pub-6436658914108583/2151054064</string>
    <string name="nativead" translatable="false">ca-app-pub-6436658914108583/9185281999</string>
    <string name="interstitial" translatable="false">ca-app-pub-6436658914108583/3647968563</string>
    <string name="fb_appid" translatable="false"></string>
    <string name="fb_banner" translatable="false">549167759165615_549192715829786</string>
    <string name="fb_nativead" translatable="false">549167759165615_551513495597708</string>
    <string name="fb_interstitial" translatable="false">549167759165615_549190905829967</string>
    <string name="domainHead">Enter your school url</string>
    <string name="submit">SUBMIT</string>
    <string name="save">Save</string>
    <string name="send">Send</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="userNameHint">Please enter username</string>
    <string name="userPasswordHint">Please enter password</string>
    <string name="usernamePasswordHint">Please enter username and password</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="changeUrl">Change Domain</string>
    <string name="admin">Admin</string>
    <string name="thisMonth">This Month</string>
    <string name="incomplete">Incomplete</string>
    <string name="pendingTask">My Pending Task</string>
    <string name="today">Today\'s</string>
    <string name="calender">Calender</string>
    <string name="taskAndEvents">Task &amp; Events</string>
    <string name="about">About School</string>
    <string name="Logout">Logout</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="fees">Fees</string>
    <string name="timeTable">Class Timetable</string>
    <string name="liveclasses">Zoom Live Classes</string>
    <string name="livegmeetclasses">Gmeet Live Classes</string>
    <string name="homework">Homework</string>
    <string name="onlineexam">Online Examination</string>
    <string name="examSchedule">Exam Schedule</string>
    <string name="noticeBoard">Notice Board</string>
    <string name="applyleave">Apply Leave</string>
    <string name="downloadCenter">Download Center</string>
    <string name="attendance">Attendance</string>
    <string name="examination">Examinations</string>
    <string name="timeLine">Student Timeline</string>
    <string name="documents">My Documents</string>
    <string name="transportRoute">Transport Routes</string>
    <string name="hostelRoom">Hostel Rooms</string>
    <string name="notification">Notification</string>
    <string name="examresult">Exam Result</string>
    <string name="behavioureport">Behaviour Records</string>
    <string name="visitorbook">Visitor Book</string>
    <string name="daily_assignment">Daily Assignment</string>
    <string name="todolist">Calendar To Do List</string>
    <string name="others">Others</string>
    <string name="zoom">Zoom</string>
    <string name="gmeet">Gmeet</string>
    <string name="elearning">E-Learning</string>
    <string name="academic">Academics</string>
    <string name="communicate">Communicate</string>
    <string name="syllabus_status">Syllabus Status</string>
    <string name="father">Father</string>
    <string name="mother">Mother</string>
    <string name="guardian">Guardian</string>
    <string name="admissionNo">Adm. No.</string>
    <string name="RollNo">Roll Number</string>
    <string name="barcode">Barcode</string>
    <string name="rte">RTE</string>
    <string name="personalDetail">Personal</string>
    <string name="admDate">Admission Date</string>
    <string name="dob">Date Of Birth</string>
    <string name="gender">Gender</string>
    <string name="category">Category</string>
    <string name="mobileNo">Mobile Number</string>
    <string name="caste">Caste</string>
    <string name="religion">Religion</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="currentAdd">Current Address</string>
    <string name="permanentAdd">Permanent Address</string>
    <string name="parentsDetails">Parents</string>
    <string name="fatherName">Father\'s Name</string>
    <string name="fatherPhone">Father\'s Phone</string>
    <string name="fatherOcc">Father\'s Occupation</string>
    <string name="motherName">Father\'s Name</string>
    <string name="motherPhone">Mother\'s Phone</string>
    <string name="motherOcc">Mother\'s Occupation</string>
    <string name="gardianName">Gardian\'s Name</string>
    <string name="gardianEmail">Gardian\'s Email</string>
    <string name="gardianRelation">Gardian\'s Relation</string>
    <string name="gardianPhone">Gardian\'s Phone</string>
    <string name="gardianOcc">Gardian\'s Occupation</string>
    <string name="gardianAdd">Gardian\'s Address</string>
    <string name="otherDetails">Other</string>
    <string name="previousSchool">Previous School</string>
    <string name="nationalIdNo">National ID Number</string>
    <string name="localIdNo">Local ID Number</string>
    <string name="bankAcNo">Bank Account Number</string>
    <string name="bankName">Bank Name</string>
    <string name="ifscCode">IFSC Code</string>
    <string name="pickup_point">Pickup Point</string>
    <string name="vehicleRoute">Vehicle Route</string>
    <string name="bloodGroup">Blood Group</string>
    <string name="studentHouse">Student House</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="asOnDate">As On Date</string>
    <string name="AppliedDate">Apply Date</string>
    <string name="fromDate">From Date</string>
    <string name="fromTime">Time From</string>
    <string name="toTime">Time To</string>
    <string name="applyDateError">The Apply Date field is required </string>
    <string name="fromDateError"> The From Date field is required </string>
    <string name="dateError"> The Date field is required </string>
    <string name="toDateError"> The To Date field is required </string>
    <string name="reason"> The Reason field is required </string>
    <string name="toDate">To Date</string>
    <string name="editLeave"> Edit Leave </string>
    <string name="editleave">Edit Leave</string>
    <string name="createNewLeave"> Add Leave </string>
    <string name="pending"> Pending </string>
    <string name="approved"> Approved </string>
    <string name="disapproved"> Disapproved</string>
    <string name="processingfees"> Processing Fees</string>
    <string name="dueDate">Due Date</string>
    <string name="feescode">Fees Code</string>
    <string name="routepickuppoint">Route Pickup Point</string>
    <string name="amt">Amount</string>
    <string name="dateofPayment">Date of Payment</string>
    <string name="paymentMode">Payment Mode</string>
    <string name="paymentFrom">Payment From</string>
    <string name="transportfeesmonth">Transport Fees Month</string>
    <string name="reference"> Reference</string>
    <string name="amount"> Amount Paid</string>
    <string name="paidAmt">Paid Amt</string>
    <string name="balanceAmt">Balance Amt</string>
    <string name="feeDetail">Fees Details</string>
    <string name="balance">Balance</string>
    <string name="fine">Fine</string>
    <string name="discount">Discount</string>
    <string name="payFees">Pay Fees</string>
    <string name="discountMsg">Discount of </string>
    <string name="paymentId">Id</string>
    <string name="paymentDate">Date</string>
    <string name="paymentdate">Payment Date</string>
    <string name="submitdate">Submit Date</string>
    <string name="statusdate">Status Date</string>
    <string name="app_rej">Approved/Rejected</string>
    <string name="paymentid">Payment Id</string>
    <string name="feesgroup">Fees Group</string>
    <string name="paymentDiscount">Discount</string>
    <string name="paymentFine">Fine</string>
    <string name="paymentPaid">Paid</string>
    <string name="pay">Pay</string>
    <string name="paymentmodeError">The Payment Mode field is required. </string>
    <string name="paymentdateError">The Date Of Payment field is required. </string>
    <string name="paymentfromError">The Payment From field is required. </string>
    <string name="paymentamountError">The Amount Paid field is required. </string>
    <string name="homeworkDate">Homework Date</string>
    <string name="submissionDate">Submission Date</string>
    <string name="evaluationDate">Evaluation Date</string>
    <string name="createdBy">Created By</string>
    <string name="evaluatedBy">Evaluated By</string>
    <string name="homeworkDetails">Homework Details</string>
    <string name="upload_homework">Upload Homework</string>
    <string name="assigned_on">Homework Date</string>
    <string name="assigned_by">Assigned By</string>
    <string name="due_on">Submission Date</string>
    <string name="present">Present</string>
    <string name="absent">ABS</string>
    <string name="late">Late</string>
    <string name="halfDay">Half Day</string>
    <string name="holiday">Holiday</string>
    <string name="download">Download</string>
    <string name="assignment"> Assignment </string>
    <string name="studyMaterial"> Study Material</string>
    <string name="syllabus">Syllabus</string>
    <string name="otherDownload">Others</string>
    <string name="contents">Contents</string>
    <string name="videoTutorial">Video Tutorial</string>
    <string name="startEndTime">Start Time / End Time</string>
    <string name="date">Date</string>
    <string name="datetime">Date Time</string>
    <string name="classduration">Class Duration</string>
    <string name="minutes">(Minutes)</string>
    <string name="max">Max Marks</string>
    <string name="min">Min Marks</string>
    <string name="datefrom">Date From</string>
    <string name="examfrom">Exam From</string>
    <string name="dateto">Date To</string>
    <string name="examto">Exam To</string>
    <string name="totalattempts">Total Attempts</string>
    <string name="classes">Class</string>
    <string name="attempted">Attempted</string>
    <string name="duration">Duration</string>
    <string name="quiz">Quiz</string>
    <string name="point">Point</string>
    <string name="question">Question</string>
    <string name="total_ques">Total Questions</string>
    <string name="subjectdetail">Subject Details</string>
    <string name="totalattempt">Total Attempt</string>
    <string name="status">Status</string>
    <string name="attachment">Attachment</string>
    <string name="passing_per">Passing (%)</string>
    <string name="exam_rank">Exam Rank</string>
    <string name="rank">Rank</string>
    <string name="examrank">Exam Rank</string>
    <string name="score_per">Score (%)</string>
    <string name="descriptive_ques">Descriptive Questions</string>
    <string name="answer">Answer</string>
    <string name="answerwordcount">Answer Word Limit</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="total_exam_marks">Total Exam Marks</string>
    <string name="total_scored_marks">Total Scored Marks</string>
    <string name="not_attempt">Not Attempted</string>
    <string name="correct">Correct</string>
    <string name="wrong">Wrong</string>
    <string name="incorrect">Incorrect</string>
    <string name="startexam">Start Exam</string>
    <string name="privacyPolicy">Privacy Policy</string>
    <string name="noData"> No Data Found! </string>
    <string name="issuedbookheading">Your Issued Books is here!</string>
</resources>