<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.edu.magika.TakeUrl"
    android:background="@drawable/img_login_background">

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adUnitId="@string/banner"
        ads:adSize="BANNER"
        android:layout_centerHorizontal="true"/>
    <LinearLayout
        android:id="@+id/banner_container"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="vertical"
        android:layout_below="@+id/adView"
        />

    <com.google.android.ads.nativetemplates.TemplateView
        android:layout_marginTop="20dp"
        android:layout_below="@+id/login_layout"
        android:visibility="gone"
        android:id="@+id/my_template"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:gnt_template_type="@layout/gnt_small_template_view" />

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:src="@drawable/logo_small"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_above="@+id/login_layout" />

    <RelativeLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:id="@+id/layout_urlET_takeUrl"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edittext_stlye"
                android:gravity="center">

                <ImageView
                    android:id="@+id/icon_username_login"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:padding="10dp"
                    android:src="@drawable/ic_web_yellow"
                    android:tint="@color/textHeading" />

                <EditText
                    android:id="@+id/et_domain_takeUrl"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/transparent"
                    android:hint="@string/domainHead"
                    android:inputType="text"
                    android:singleLine="true"
                    android:text=""
                    android:textColor="@color/textHeading"
                    android:textColorHint="@color/textHeading"
                    android:textSize="@dimen/primaryText" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/btn_submit_takeUrl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_urlET_takeUrl"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/yellow_curve"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="@dimen/heading"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="30dp"
                android:layout_toRightOf="@+id/btn_login"
                android:src="@drawable/ic_rightarrow"
                android:tint="@color/white" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>