<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.edu.magika.students.StudentLibraryBook">

    <androidx.cardview.widget.CardView
        android:layout_above="@id/adView"
        android:id="@+id/card_view_outer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="0dp"
        app:cardElevation="0dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="20dp"
            app:cardElevation="3dp">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:weightSum="2">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/issuedbookheading"
                            android:textColor="@color/textHeading"
                            android:textSize="22dp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/topimage"
                            android:layout_width="match_parent"
                            android:layout_height="110dp"
                            android:src="@drawable/librarypage" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/data_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="visible">

                    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                        android:id="@+id/pullToRefresh"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <androidx.recyclerview.widget.RecyclerView

                            android:id="@+id/student_libraryBookIssued_listview"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:visibility="visible">

                        </androidx.recyclerview.widget.RecyclerView>
                    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/nodata"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:src="@drawable/no_data" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/noData" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.cardview.widget.CardView>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adUnitId="@string/banner"
        ads:adSize="BANNER"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>